March 11th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Replaced Perl smartmatch as it's not considered experiemental.

March 10th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Fix bug in readtrap function where it was not properly removing quotes
  around strings.  If string happened to only have a starting quote, or would
  remove it and the last character of the string.
- Fixed bug with debug mode that was causing some debug mode output even when
  debug mode was off.

March 05th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Added --exec_file to snmpttconvertmib to allow you to provide an EXEC command
  inside of a file instead of specifying on the command line.  Useful for
  commands that include quotes so that you don't have to worry about escaping on
  the command line.  Also allows you to define multiple EXEC lines instead of 
  just one.
- Added --exec_mode to snmpttconvertmib to allow you change how the EXEC line
  is built.  Setting to 0 will append the format line to the end of the line
  (default).  Setting to 1 does not append the format line to the end of the
  line.  This is useful if you have added \$Fz to the --exec line so that
  SNMPTT can replace it with the FORMAT line.  Setting to 2 is similar to 1,
  but instead of SNMPTT having to replace \$Fz with the FORMAT line, 
  snmpttconvertmib will do the substitution.

February 28th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- snmptt.ini can now be located in /etc/snmptt and is searched for at this
  location first.

February 22nd, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Fixed a bug with daemon_uid that prevented SNMPTT from starting on FreeBSD
  (bug 47).  Thanks to Christian Ullrich for the fix.
- Added support for sub-second sleep for spool folder processing when sleep is
  set to less than 1.  Thanks to Tyler Leeds for the code.
- Fixed a bug where traps arriving with the hostname set to UNKNOWN were