@@ -1,3 +1,9 @@
+March 13th, 2021: Alex Burger <alex_b@users.sourceforge.net>
+- Used PerlCritic to check all source files:
+- Changed open() calls from two arguments to three.
+- Replace Perl bare words with variables.
+- Enabled Perl warnings
+
 March 11th, 2021: Alex Burger <alex_b@users.sourceforge.net>
 - Replaced Perl smartmatch as it's not considered experiemental.
 
